# contentor

./: .gitignore  README.md  docker-compose.yml
auth-service/: Dockerfile  README.md  alembic.ini  db.py  docker-compose.yml  main.py  models.py  pyproject.toml  start.py  users_repo.py
auth-service/alembic/: env.py
auth-service/alembic/versions/: 161281c083f6_create_users_table.py
content-service/: .gitignore  Dockerfile  README.md  dev.dockerfile  docker-compose-dev.yml  docker-compose.yml  go.mod  go.sum  main.go  requirements.txt  start.py
content-service/cmd/app/: main.go
content-service/internal/authHandler/: auth.go  config.go
content-service/internal/minioHandler/: config.go  minioHandler.go
content-service/internal/server/: config.go  handlers.go  middleware.go  server.go
content-service/pkg/utils/: utils.go
content-service/pkg/webutils/: webutls.go
nginx/: nginx.conf
nginx/configs/: security.conf
nginx/sites-available/: contentor.conf
sharing-service/: .gitignore  Dockerfile  README.md  docker-compose-dev.yml  package.json  tsconfig.json
sharing-service/nginx/: nginx.conf
sharing-service/nginx/files/: username-id.txt
sharing-service/src/: index.ts
