[tool.poetry]
name = "auth-service"
version = "0.1.0"
description = ""
authors = ["furrygem"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.78.0"
SQLAlchemy = "^1.4.39"
uvicorn = "^0.18.2"
mysqlclient = "^2.1.1"
bcrypt = "^3.2.2"
alembic = "^1.8.0"
fastapi-another-jwt-auth = {version = "^0.1.6", extras = ["assymetric"]}
etcd3 = "^0.12.0"
protobuf = "3.20"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
devtools = ["assymetric"]